@@ -232,7 +232,7 @@ function make_absolute_url($path, $base_url)
   }
 
   // $path is absolute
-  if ($path{0}=='/')
+  if ($path[0] == '/')
     $abs_path = $host_url.$path;
   else
   {
@@ -244,13 +244,13 @@ function make_absolute_url($path, $base_url)
       {
         if (strrpos($base_url, '/'))
           $base_url = substr($base_url, 0, strrpos($base_url, '/'));
-        
+
         $path = substr($path, 3);
       }
 
     $abs_path = $base_url.'/'.$path;
   }
-    
+
   return $abs_path;
 }
 
